--- a/.render.yaml
+++ b/.render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: intelligent-floor-plan-management-system
-    env: java
+    runtime: docker 
     region: oregon
     plan: free
-    buildCommand: mvn clean install
-    startCommand: java -Dserver.port=$PORT -jar target/FloorPlanManagementSystem-0.0.1-SNAPSHOT.jar
     rootDir: backend
     autoDeploy: true
+ 
