--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
 # Stage 1: Build the application
 # Use a Maven image with OpenJDK 21 for building the Spring Boot application,
 # to support projects compiled for Java 21.
-FROM maven:3.8.5-openjdk-21 AS build
+# Changed from maven:3.8.5-openjdk-21 to maven:3-openjdk-21 for better compatibility,
+# as the specific 3.8.5 version with openjdk-21 might not be a standard tag.
+FROM maven:3-openjdk-21 AS build
 
 # Set the working directory inside the container for the build stage.
 WORKDIR /app
